show message when you have no cars in list + call to action button to create a car

--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -18,6 +18,15 @@
     font-size: 18px;
     font-weight: 200; }
 
+.no-cars {
+  text-align: center; }
+  .no-cars p:first-child {
+    font-size: 24px;
+    font-weight: 200; }
+  .no-cars p:last-child {
+    font-size: 18px;
+    font-weight: 200; }
+
 .car {
   max-width: 680px;
   height: 320px;
